--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,20 +1,32 @@
 <!DOCTYPE html>
 <html>
 
-  {% include head.html %}
+{% include head.html %}
 
-  <body>
+<body>
 
-    {% include header.html %}
-
-    <div class="page-content">
-      <div class="wrapper">
-        {{ content }}
+  {% include header.html %}
+  <div class="site-main">
+    <div class="site-content">
+      <div class="row">
+          {{ content }}
       </div>
     </div>
+      {% if paginator.total_pages > 1 %}
+      <div class="pagination-links">
+        {% if paginator.previous_page %}
+        <a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}" class="btn previous"><i class="fa fa-chevron-left"></i>&nbsp;&nbsp;Newer Posts</a>
+        {% endif %}
+        {% if paginator.next_page %}
+        <a href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}" class="btn next">Older Posts&nbsp;&nbsp;<i class="fa fa-chevron-right"></i></a>
+        {% endif %}
+      </div>
+      {% endif %}
+  </div>
 
-    {% include footer.html %}
+  {% include footer.html %}
 
-  </body>
+</body>
 
 </html>
+g
