--- a/_sass/components/_quote.scss
+++ b/_sass/components/_quote.scss
@@ -6,8 +6,10 @@
 $quote-prefix: "quote" !default;
 
 .#{$quote-prefix} {
+    display: block;
     box-sizing: border-box;
     padding: $theme-quote-padding;
     border-radius: $theme-quote-border-radius;
-    background: $theme-color-quote-background;
+    background: map-get($theme-color-quote, background);
+    color: map-get($theme-color-quote, foreground);
 }
