--- a/_sass/themes/default/base/_typography.scss
+++ b/_sass/themes/default/base/_typography.scss
@@ -2,7 +2,9 @@
 // Typography - Default Theme
 // ==========================================
 
-$theme-font-family: "Helvetica", Arial, Serif;
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800');
+
+$theme-font-family: "Open Sans", Helvetica, Arial, Serif;
 
 // All values should be even number
 $theme-font-size: (
@@ -14,11 +16,18 @@ $theme-font-size: (
 );
 
 $theme-line-height: (
-  small: 1.4,
-  medium: 1.4,
-  large: 1.2,
-  x-large: 1.2,
-  xx-large: 1.2
+    small: 1.4,
+    medium: 1.4,
+    large: 1.2,
+    x-large: 1.2,
+    xx-large: 1.2
+);
+
+$theme-font-weight: (
+    light: 300,
+    normal: 400,
+    bold: 700,
+    super-bold: 800
 );
 
 $theme-letter-spacing: 0;
