--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,14 +1,16 @@
 ---
 layout: default
 ---
-<article class="post">
+<div class="row">
+  <article class="post gr-8">
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-  </header>
+    <header class="post-header">
+      <h1 class="post-title">{{ page.title }}</h1>
+    </header>
 
-  <div class="post-content">
-    {{ content }}
-  </div>
+    <div class="post-content">
+      {{ content }}
+    </div>
 
-</article>
+  </article>
+</div>
