--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,15 +1,55 @@
 ---
 layout: default
 ---
-<article class="post" itemscope itemtype="http://schema.org/BlogPosting">
+<div class="row">
+  <div class="gr-9">
+  <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
 
-  <header class="post-header">
-    <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
-    <p class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>{% if page.author %} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}</p>
-  </header>
+    <header>
+      <div class="post__feature-img">
+	<img src="{{ page.feature_image | prepend: 'img/' | prepend: site.asseturl }}">
+      </div>
+      <h1 class="post__title" itemprop="name headline">{{ page.title }}</h1>
+      <p class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>{% if page.author %} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}</p>
+    </header>
 
-  <div class="post-content" itemprop="articleBody">
-    {{ content }}
+    <div class="post__body" itemprop="articleBody">
+      {{ content }}
+    </div>
+
+  </article>
   </div>
 
-</article>
+  <div class="gr-3">
+    <aside>
+      <div class="box">
+	<div class="box__content">
+	  <h3 class="u-text--large u-text--bold">Recent Posts</h3>
+	  {% for recent in site.posts limit:3 %}
+	  <a class="title" href="{{ recent.url | prepend: site.baseurl }}">{{ recent.title }}</a>
+	  {% endfor %}      
+	</div>
+	<div class="box">
+	  <div class="box__content">
+	    <h3 class="u-text--large u-text--bold">Recent Posts</h3>
+	    <ul>
+	      {% for post in site.posts %}
+	      {% unless post.next %}
+	      <h3>{{ post.date | date: '%Y %b' }}</h3>
+	      {% else %}
+	      {% capture year %}{{ post.date | date: '%Y %b' }}{% endcapture %}
+	      {% capture nyear %}{{ post.next.date | date: '%Y %b' }}{% endcapture %}
+	      {% if year != nyear %}
+	      <h3>{{ post.date | date: '%Y %b' }}</h3>
+	      {% endif %}
+	      {% endunless %}
+
+	      <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+	      {% endfor %}
+	    </ul>	    
+	  </div>
+	</div>
+      </div>
+  </aside>
+  </div>
+</div>
