add archive page and side archive info

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
   <nav class="container">
     <div class="row">
       <div class="gr-3">
-	<a class="topbar__title" href="{{ site.baseurl }}">{{ site.title }}</a>
+	<a class="topbar__title" href="/">{{ site.title }}</a>
       </div>
 
       <ul class="topbar-nav gr-9">
