--- a/_sass/themes/default/base/_colors.scss
+++ b/_sass/themes/default/base/_colors.scss
@@ -175,3 +175,10 @@ $theme-color-post: (
     link-default: $zomp,
     link-hover: $dark-zomp
 );
+
+// Tree
+$theme-color-tree: (
+    subtitle: $japanese-indigo,
+    list-default: $zomp,
+    list-hover: $dark-zomp
+);
