--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -1,27 +1,36 @@
 ---
 layout: default
 ---
- <h1 class="archive-title">{{ page.type }} '{{ page.title }}'</h1>
-{% for post in page.posts %}
-<div class="col-xs-height col-sm-6 col-lg-4 post">
-  <div class="box">
-    <div class="thumb">
-      <a href="{{ post.url }}">
-      <img src="{% if post.feature_image %}{{ post.feature_image | prepend: 'img/' | prepend: site.asseturl }}{% else %}{{ post.feature_image | prepend: 'img/' | prepend: site.asseturl }}{% endif %}">
-      </a>
-    </div>
-    <div class="content">
-      <h2 class="title"><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></h2>
-      <footer>
-        <span class="date"><i class="fa fa-calendar-o"></i>&nbsp;&nbsp;{{ post.date | date: "%b %-d, %Y" }}</span>
-        <span class="tags"><i class="fa fa-bookmark-o"></i>&nbsp;&nbsp;
+<h1 class="u-text--large u-mg-btm--medium">
+  {% if page.type == 'month' %}
+  Archive for {{ page.date | date: "%Y %b" }}
+  {% elsif page.type == 'year' %}
+  Archive for {{ page.date | date: "%Y" }}
+  {% elsif page.type == 'category' %}
+  {{ page.type }} '{{ page.title }}'
+  {% elsif page.type == 'tag' %}
+  {{ page.type }} '{{ page.title }}'  
+  {% endif %}
+</h1>
+<div class="row">
+  {% for post in page.posts %}
+  <div class="gr-4 gr-6--tablet gr-12--mobile">
+    <div class="card">
+      <div class="card__thumbnail">
+	<a href="{{ post.url }}">
+	  <img src="{% if post.feature_image %}{{ post.feature_image | prepend: 'img/' | prepend: site.asseturl }}{% else %}{{ post.feature_image | prepend: 'img/' | prepend: site.asseturl }}{% endif %}">
+	</a>
+      </div>
+      <a href="{{ post.url }}" class="card__title card__title--fixed">{{ post.title }}</a>
+      <div class="card-info">
+	<span class="card-info__date"><i class="i-calendar"></i>&nbsp;&nbsp;{{ post.date | date: "%b %-d, %Y" }}</span>
+	<span class="card-info__tags">
           {% for tag in post.tags %}
-          {% assign no_comma = forloop.last %}
-          <a href="{{ "/tag/" | prepend: site.baseurl | append: tag | append: "/" | downcase }}">{{ tag }}</a>{% unless no_comma %},{% endunless %}&nbsp;
+          <a class="tag" href="{{ "/tag/" | prepend: site.baseurl | append: tag | append: "/" | downcase }}">{{ tag }}</a>
           {% endfor %}
-        </span>
-      </footer>
+	</span>
+      </div>
     </div>
   </div>
+  {% endfor %}
 </div>
-{% endfor %}
