--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,35 +21,6 @@ layout: default
   </div>
 
   <div class="gr-3">
-    <aside>
-      <div class="box">
-	<div class="box__content">
-	  <h3 class="u-text--large u-text--bold">Recent Posts</h3>
-	  {% for recent in site.posts limit:3 %}
-	  <a class="title" href="{{ recent.url | prepend: site.baseurl }}">{{ recent.title }}</a>
-	  {% endfor %}      
-	</div>
-	<div class="box">
-	  <div class="box__content">
-	    <h3 class="u-text--large u-text--bold">Recent Posts</h3>
-	    <ul>
-	      {% for post in site.posts %}
-	      {% unless post.next %}
-	      <h3>{{ post.date | date: '%Y %b' }}</h3>
-	      {% else %}
-	      {% capture year %}{{ post.date | date: '%Y %b' }}{% endcapture %}
-	      {% capture nyear %}{{ post.next.date | date: '%Y %b' }}{% endcapture %}
-	      {% if year != nyear %}
-	      <h3>{{ post.date | date: '%Y %b' }}</h3>
-	      {% endif %}
-	      {% endunless %}
-
-	      <li><a href="{{ post.url }}">{{ post.title }}</a></li>
-	      {% endfor %}
-	    </ul>	    
-	  </div>
-	</div>
-      </div>
-  </aside>
+    {% include aside.html %}
   </div>
 </div>
