--- a/_sass/_app.scss
+++ b/_sass/_app.scss
@@ -56,6 +56,7 @@
 @import "components/sidebar";
 @import "components/tag";
 @import "components/topbar";
+@import "components/tree";
 
 // -------------------------------------------
 // Utilities
