--- a/_sass/themes/default/base/_colors.scss
+++ b/_sass/themes/default/base/_colors.scss
@@ -156,7 +156,9 @@ $theme-color-card: (
     link-default: $japanese-indigo,
     link-hover: $dark-zomp,
     border: $timberwolf,
-    date: $laurel-green
+    date: $laurel-green,
+    category-default: $zomp,
+    category-hover: $dark-zomp
 );
 
 // Tag
