--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,15 +2,21 @@
 layout: default
 ---
 <div class="row">
-  <article class="post gr-8">
+  <div class="gr-9 gr-12--mobile">
+  <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
 
-    <header class="post-header">
-      <h1 class="post-title">{{ page.title }}</h1>
+    <header>
+      <h1 class="post__title" itemprop="name headline">{{ page.title }}</h1>
     </header>
 
-    <div class="post-content">
+    <div class="post__body" itemprop="articleBody">
       {{ content }}
     </div>
 
   </article>
+  </div>
+
+  <div class="gr-3 hide--mobile">
+    {% include aside.html %}
+  </div>
 </div>
