--- a/_sass/base/_grid.scss
+++ b/_sass/base/_grid.scss
@@ -141,9 +141,15 @@ $_gridle-packages : (
 @include gridle_setup($gridle-setup);
 @include gridle_register_state(mobile, $gridle-breakpoint-mobile);
 @include gridle_register_state(tablet, $gridle-breakpoint-tablet);
-@include gridle_generate_classes();
+// hack for gridle unecessary breakpoint :|
+@include gridle_register_state(ipad-landscape, (
+	query : "only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : landscape)",
+	direction : ltr,
+    gutter-width: 20px
+));
+@include gridle_generate_classes;
 
 .container {
-    max-width: 1204px;
+    max-width: $theme-max-breakpoint;
     margin: 0 auto;
 }
