--- a/_sass/components/_button.scss
+++ b/_sass/components/_button.scss
@@ -5,6 +5,8 @@
 
 $button-prefix: "btn";
 
+@if ($theme-button-enable == true) {
+
 .#{$button-prefix} {
     @include button-padding(map-get($theme-font-size, medium));
 
@@ -148,4 +150,6 @@ $button-prefix: "btn";
         background   : map-get($theme-color-button-inverse-cta-hover, background);
         border-color : map-get($theme-color-button-inverse-cta-hover, foreground);
     }
+}
+
 }
