--- a/_sass/themes/default/base/_colors.scss
+++ b/_sass/themes/default/base/_colors.scss
@@ -175,7 +175,8 @@ $theme-color-post: (
     title: $japanese-indigo,
     border: $timberwolf,
     link-default: $zomp,
-    link-hover: $dark-zomp
+    link-hover: $dark-zomp,
+    date: $laurel-green
 );
 
 // Tree
