--- a/_sass/components/_quote.scss
+++ b/_sass/components/_quote.scss
@@ -5,6 +5,8 @@
 
 $quote-prefix: "quote" !default;
 
+@if ($theme-quote-enable == true) {
+
 .#{$quote-prefix} {
     display: block;
     box-sizing: border-box;
@@ -12,4 +14,6 @@ $quote-prefix: "quote" !default;
     border-radius: $theme-quote-border-radius;
     background: map-get($theme-color-quote, background);
     color: map-get($theme-color-quote, foreground);
+}
+
 }
