--- a/_sass/themes/default/_index.scss
+++ b/_sass/themes/default/_index.scss
@@ -5,6 +5,23 @@
 // framework?
 
 $global-use-theme: true; // set to use theme
+$theme-max-breakpoint: 1224px;
+
+$theme-box-enable: true;
+$theme-button-enable: true;
+$theme-card-enable: true;
+$theme-dropdown-enable: false;
+$theme-field-enable: false;
+$theme-icon-enable: true;
+$theme-modal-enable: false;
+$theme-notif-enable: false;
+$theme-paginator-enable: true;
+$theme-post-enable: true;
+$theme-quote-enable: true;
+$theme-sidebar-enable: false;
+$theme-tag-enable: true;
+$theme-topbar-enable: true;
+$theme-tree-enable: true;
 
 // -------------------------------------------
 // Base
