--- a/_sass/components/_topbar.scss
+++ b/_sass/components/_topbar.scss
@@ -88,6 +88,10 @@ $topbar-prefix: "topbar" !default;
     .#{$topbar-prefix}-nav__link {
         display: block;
     }
+
+    &.is-active {
+        display: block;
+    }
 }
 
 }
