--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <div class="row">
   <div class="gr-9 gr-12--mobile">
-  <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
+  <article class="post card" itemscope itemtype="http://schema.org/BlogPosting">
 
     <header>
       <h1 class="post__title" itemprop="name headline">{{ page.title }}</h1>
