--- a/_sass/components/_card.scss
+++ b/_sass/components/_card.scss
@@ -17,6 +17,10 @@ $card-prefix: "card" !default;
 
     &__thumbnail {
         margin-bottom: $theme-card-padding;
+
+        &__img {
+            width: 100%;
+        }
     }
 
     &__title {
