add excerpt to card without thumbnail

--- a/_sass/_app.scss
+++ b/_sass/_app.scss
@@ -19,7 +19,7 @@
 // and only need one at a time
 // -------------------------------------------
 
-@import "themes/default/index";
+@import "themes/hyde/index";
 
 // -------------------------------------------
 // Base
