--- a/_includes/card.html
+++ b/_includes/card.html
@@ -1,6 +1,7 @@
 <div class="card card--fixed-title u-flex-column u-h--292">
   <div class="u-flex-1 u-flex-column">
     <a href="{{ post.url }}" class="card__title">{{ post.title }}</a>
+    <p>{{ post.excerpt | strip_html | strip_newlines | truncate: 100 }}</p>    
   </div>
   <div class="card-info u-flex-2">
     <span class="card-info__date"><i class="i-calendar"></i>&nbsp;&nbsp;{{ post.date | date: "%b %-d, %Y" }}</span>
