--- a/_sass/themes/hyde/base/_typography.scss
+++ b/_sass/themes/hyde/base/_typography.scss
@@ -2,7 +2,9 @@
 // Typography - Default Theme
 // ==========================================
 
-$theme-font-family: "Helvetica", Arial, Serif;
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800');
+
+$theme-font-family: "Open Sans", Helvetica, Arial, Serif;
 
 // All values should be even number
 $theme-font-size: (
