--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -14,23 +14,12 @@ layout: default
 </h1>
 <div class="row">
   {% for post in page.posts %}
-  <div class="gr-4 gr-6--tablet gr-12--mobile">
-    <div class="card">
-      <div class="card__thumbnail">
-	<a href="{{ post.url }}">
-	  <img src="{% if post.feature_image %}{{ post.feature_image | prepend: 'img/' | prepend: site.asseturl }}{% else %}{{ post.feature_image | prepend: 'img/' | prepend: site.asseturl }}{% endif %}">
-	</a>
-      </div>
-      <a href="{{ post.url }}" class="card__title card__title--fixed">{{ post.title }}</a>
-      <div class="card-info">
-	<span class="card-info__date"><i class="i-calendar"></i>&nbsp;&nbsp;{{ post.date | date: "%b %-d, %Y" }}</span>
-	<span class="card-info__tags">
-          {% for tag in post.tags %}
-          <a class="tag" href="{{ "/tag/" | prepend: site.baseurl | append: tag | append: "/" | downcase }}">{{ tag }}</a>
-          {% endfor %}
-	</span>
-      </div>
-    </div>
+  <div class="gr-3 gr-12--mobile">
+    {% if post.feature_image %}
+    {% include card-with-thumbnail.html %}
+    {% else %}
+    {% include card.html %}
+    {% endif %}
   </div>
   {% endfor %}
 </div>
