--- a/_sass/themes/hyde/components/_box.scss
+++ b/_sass/themes/hyde/components/_box.scss
@@ -3,3 +3,7 @@
 // ==========================================
 
 $theme-box-padding: 20px;
+$theme-box-border-width: $theme-border-width;
+$theme-box-border-radius: $theme-border-radius;
+$theme-box-border-style: $theme-border-style;
+$theme-box-text-align: left;
