--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,7 +14,7 @@
   <meta property="og:site_name" content="{{ site.name }}"/> 
   <meta property="og:description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}"/>
   <meta name="google-site-verification" content="{{ site.google_site_verification }}" />
-  <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}" media="screen">
+  <link rel="stylesheet" href="{{ "/css/app.min.css" | prepend: site.baseurl }}" media="screen">
 
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
