--- a/_sass/components/_box.scss
+++ b/_sass/components/_box.scss
@@ -12,17 +12,18 @@ $box-prefix: "box" !default;
     border-collapse: separate;
 
     &__header {
-        border: 1px solid map-get($theme-color-box-header, foreground);
-        border-bottom: 0;
-        border-top-right-radius: $theme-border-radius;
-        border-top-left-radius: $theme-border-radius;
+        @include border($theme-box-border-width $theme-box-border-width 0,
+                        $theme-box-border-style,
+                        map-get($theme-color-box-header, foreground),
+                        $theme-box-border-radius $theme-box-border-radius 0 0
+                       );
 
         background: map-get($theme-color-box-header, background);
         color: $theme-color-text;
 
         font-size: map-get($theme-font-size, medium);
         font-weight: bold;
-        text-align: left;
+        text-align: $theme-box-text-align;
 
         padding: $theme-box-padding;
 
@@ -37,8 +38,12 @@ $box-prefix: "box" !default;
     }
 
     &__content {
-        border: 1px solid map-get($theme-color-box-content, border);
-        border-radius: $theme-border-radius;
+        @include border(
+            $theme-box-border-width,
+            $theme-box-border-style,
+            map-get($theme-color-box-content, border),
+            $theme-border-radius
+        );
 
         background: map-get($theme-color-box-content, background);
         color: $theme-color-text;
@@ -58,13 +63,11 @@ $box-prefix: "box" !default;
 
         background: map-get($theme-color-box-header, foreground);
 
-        margin-top: $theme-box-padding;
-        margin-bottom: $theme-box-padding;
-        margin-left: -10px;
-        padding-right: 20px;
+        margin: $theme-box-padding 0 $theme-box-padding -10px;
+        padding: 0 $theme-box-padding 0 0;
 
         width: 100%;
-        height: 1px;
+        height: $theme-box-border-width;
     }
 }
 
