--- a/_sass/components/_tree.scss
+++ b/_sass/components/_tree.scss
@@ -13,6 +13,7 @@ $tree-prefix: "tree" !default;
     padding: 0;
 
     &__subtitle {
+        display: block;
         font-weight: map-get($theme-font-weight, bold);
         font-size: map-get($theme-font-size, medium);
         color: map-get($theme-color-tree, subtitle);
