--- a/_sass/themes/default/base/_border.scss
+++ b/_sass/themes/default/base/_border.scss
@@ -3,6 +3,7 @@
 // ===========================================
 
 $theme-border-size: 1px;
+$theme-border-width: 1px;
 $theme-border-style: solid;
 $theme-border-radius: 3px;
 $theme-border-color: $gray;
