--- a/_sass/themes/default/components/_icon.scss
+++ b/_sass/themes/default/components/_icon.scss
@@ -5,7 +5,7 @@
 $ionicons-font-path: "/assets/typefaces";
 $ionicons-prefix: i-;
 
-@import "../../../../bower_components/Ionicons/scss/ionicons";
+@import "ionicons";
 
 $theme-icon-font-family: $ionicons-font-family;
 $theme-icon-dropdown: $ionicon-var-android-arrow-dropdown;
